syntax = "proto3";

package statusProto;
option go_package = "./;statusProto";

message StatusRequest {
    string itemType = 1;
}

message Item {
    string name = 2;
}

message ItemInstances {
    repeated Item items = 1;
}

message StatusList {
    repeated ItemInstances listItems = 1;
}

service statusService {
    rpc Status (StatusRequest) returns (StatusList) {};
}